# Coursework_4

./: README.md  pyproject.toml
src/: class_abstractapi.py  class_abstractfile.py  class_headhunterapi.py  class_jsonfile.py  class_vacancy.py  main.py  utils.py
tests/: conftest.py  test_class_jsonfile.py  test_class_vacancy.py  test_utils.py
