[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["Tatyana Kavardaeva <solarpoint@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
pytest = "^8.2.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
